# pdfDiffChecker

./: .gitignore  .mcp.json  LICENSE  README.md  Tasks.md  build_nuitka.ps1  licences.txt  licences_tree.txt  main.py  pyproject.toml
configurations/: color_theme.py  message_codes.json  message_manager.py  tool_settings.py  user_setting_manager.py  user_settings.json
controllers/: app_state.py  color_theme_manager.py  drag_and_drop_file.py  event_bus.py  file2png_by_page.py  image_editor_controller.py  image_operations.py  image_sw_paths.py  keyboard_navigation.py  mouse_event_handler.py  mouse_event_handler.py.bak  pdf_export_handler.py  pdf_mouse_handler.py  widgets_tracker.py
docs/: architecture.md  controllers_and_views.md  file_structure.md  shortcut_and_guidance_methods.md  use-case.drawio
models/: class_dictionary.py  image_file_extension_converter.py  image_file_size_converter.py
scripts/: gh_release_with_exe.ps1
tests/: conftest.py  test_preview_diff_emphasis.py
themes/: coloring_theme_interface.py  dark.json  light.json  pastel.json
utils/: image_alignment.py  image_cache.py  input_normalization.py  log_throttle.py  page_control_utils.py  path_dialog_utils.py  path_normalization.py  preview_diff_emphasis.py  shortcut_binding.py  theme_helpers.py  transform_tuple.py  utils.py  win_open_dialog_focus.py  workspace_input_formats.py
views/: description.py  image_editor_view.py  image_ope_tab.py  licenses.py  main_tab.py  main_tab_mixin.py  pdf_ope_tab.py  pdf_ope_tab.py.bak
widgets/: balloon_message_window.py  base_button.py  base_entry.py  (+25 more)
(+18 files in other folders)
