[project]
name = "pdfdiffchecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pypdf>=6.1.3",
    "pypdfium2>=5.0.0",
    "pytest-cov>=4.0.0",
    "tkinterdnd2>=0.4.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
