[project]
name = "pdfdiffchecker"
version = "1.0.12"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pypdf>=6.1.3",
    "pypdfium2>=5.0.0",
    "reportlab>=4.4.10",
    "svglib>=1.6.0",
    "tkinterdnd2>=0.4.3",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
]
# Nuitka onefile compression (pulls zstandard); not declared by other runtime deps.
build = [
    "nuitka[onefile]>=4.0.7",
]
